:zap: Fix improper header hierarchy on the homepage and make h2 headers smaller on mobile devices

--- a/src/patronsWidget.styl
+++ b/src/patronsWidget.styl
@@ -29,8 +29,11 @@ h1, h2, h3
     color accent1
     font-weight 400
     line-height 1.5em
-h1:first-child
+h2:first-child
     margin-top 0
+    font-size 2em
+h3
+    font-size 1.5em
 
 .aPatronList
     display flex
