--- a/src/styles/buildingBlocks.styl
+++ b/src/styles/buildingBlocks.styl
@@ -356,10 +356,11 @@ nav
             vertical-align -4px
 
 #patrons
-    h1, h2
-        margin-top 0
     h2
-        font-size 2.5rem
+        margin-top 0
+    h3
+        margin-bottom 1rem
+        font-size 2rem
 
 .aPatronList
     display flex
