--- a/src/styles/typography.styl
+++ b/src/styles/typography.styl
@@ -27,6 +27,11 @@ h1, h2
     font-size 3rem
     line-height 4rem
     padding 0.75rem 0
+@media (max-width 640px)
+    h2
+        font-size 2rem
+        line-height 3rem
+        font-weight 400
 h3
     font-size 1.5rem
     line-height 1.5em
